# TeleBotToDo

./: .env_example  .envdev  .gitignore  Readme.md  compose-dev.yaml  compose.yaml
app/: .dockerignore  LEXICON.py  alembic.ini  db.py  db_code.py  db_models.py  db_start.py  dockerfile  functions.py  main.py  models.py  my_calendar.py  pyproject.toml  requirements.txt  settings.py  shemas.py  test.py  weather_models.py
app/alembic/: env.py
app/alembic/versions/: 2023_10_19_1326-a5784ae1f29e_auto_create_all_tables.py  2023_10_19_16_57-e2748c420ba9_create_all_tables.py
app/routers/: add_object.py  calendar.py  get_current.py  get_outdated.py  location.py  mark_done.py  start.py  unspecific.py  weather.py
cleaner/: dockerfile  entrypoint.sh  main.py
db/: db_schema.sql
