[tool.poetry]
name = "TeleBotAll"
version = "0.1.0"
description = ""
authors = ["egor nikitin <eanikitin90gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiofiles==23.1.0
aiogram==3.0.0b8
aiohttp==3.8.5
aiosignal==1.3.1
annotated-types==0.5.0
anyio==3.7.1
async-timeout==4.0.2
attrs==23.1.0
Babel==2.9.1
certifi==2023.7.22
charset-normalizer==3.2.0
click==8.1.6
frozenlist==1.4.0
h11==0.14.0
httptools==0.6.0
idna==3.4
magic-filter==1.0.10
multidict==6.0.4
pydantic==2.0.3
pydantic-settings==2.0.2
pydantic_core==2.3.0
python-dotenv==1.0.0
pytz==2023.3
PyYAML==6.0.1
sniffio==1.3.0
typing_extensions==4.7.1
uvicorn==0.23.1
uvloop==0.17.0
watchfiles==0.19.0
websockets==11.0.3
yarl==1.9.2

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
